--- a/ansible_demanic_invertry/ec2.ini
+++ b/ansible_demanic_invertry/ec2.ini
@@ -1,5 +1,5 @@
 # Ansible EC2 external inventory script settings
-# This Scripted is created by Aman Patel -   amanpatel.itofficial@gmail.com
+# This Script is created by Aman Patel -   amanpatel.itofficial@gmail.com
 
 [ec2]
 
